[package]
name = "psup"
version = "0.3.1"
authors = ["muji <muji@tmpfs.org>"]
edition = "2018"
description = "Process supervisor with inter-process communication over tokio Unix sockets"
keywords = ["Process", "Supervisor", "JSON-RPC"]
repository = "https://github.com/tmpfs/tmpfs.org"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
thiserror = "1"
futures = "0.3"
rand = "0.8"
log = "0.4"
tokio = { version = "1", features = ["net", "sync"] }
serde = {version = "1", features = ["derive"]}
once_cell = "1.7"

[dev-dependencies]
async-trait = "0.1"
pretty_env_logger = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"] }
json-rpc2 = { version= "0.9", features = ["async"] }
serde_json = "1"
