[package]
name = "psup"
version = "0.4.1"
authors = ["muji <muji@tmpfs.org>"]
edition = "2018"
description = "Process supervisor with inter-process communication over tokio Unix sockets"
keywords = ["Process", "Supervisor"]
repository = "https://github.com/tmpfs/psup"
license = "MIT OR Apache-2.0"
readme = "README.md"

[workspace]
members = [
  "impl"
]

[[bin]]
name = "psup"
path = "src/psup.rs"

[dependencies]
anyhow = "1"
tokio = {version = "1", features = ["full"]}
serde = {version = "1", features = ["derive"]}
clap = "2"
toml = "0.5"
log = "0.4"
pretty_env_logger = "0.4"
psup-impl = { version = "0.4", path = "impl" }

[dev-dependencies]
futures = "0.3"
once_cell = "1.7"
async-trait = "0.1"
pretty_env_logger = "0.4"
tokio-util = {version = "0.6", features = ["codec"]}
json-rpc2 = {version= "0.9", features = ["async"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
