[package]
name = "psup"
version = "0.6.0"
authors = ["muji <muji@tmpfs.org>"]
edition = "2018"
description = "Process supervisor with inter-process communication over tokio Unix sockets"
keywords = ["Process", "Supervisor"]
repository = "https://github.com/tmpfs/psup"
license = "MIT OR Apache-2.0"
readme = "README.md"

[workspace]
members = [
  "impl",
  "json_rpc"
]

[[bin]]
name = "psup"
path = "src/psup.rs"

[dependencies]
anyhow = "1"
tokio = {version = "1", features = ["full"]}
serde = {version = "1", features = ["derive"]}
clap = "2"
toml = "0.5"
log = "0.4"
pretty_env_logger = "0.4"
#psup-impl = { version = "0.6", path = "impl" }
psup-impl = "0.6"

[dev-dependencies]
futures = "0.3"
once_cell = "1.7"
async-trait = "0.1"
pretty_env_logger = "0.4"
tokio-util = {version = "0.6", features = ["codec"]}
json-rpc2 = {version= "0.10", features = ["async"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
psup-json-rpc = "0.6"
#psup-json-rpc = { version = "0.6", path = "json_rpc" }

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
