[package]
name = "psup-impl"
version = "0.6.3"
authors = ["muji <muji@tmpfs.org>"]
edition = "2018"
description = "Process supervisor with inter-process communication over tokio Unix sockets"
keywords = ["Process", "Supervisor"]
repository = "https://github.com/tmpfs/psup"
license = "MIT OR Apache-2.0"

[dependencies]
thiserror = "1"
futures = "0.3"
rand = "0.8"
log = "0.4"
tokio = { version = "1", features = ["rt", "net", "sync", "process", "macros", "rt-multi-thread", "time"] }
once_cell = "1.7"
